--- a/app/static/styles/_profile.scss
+++ b/app/static/styles/_profile.scss
@@ -19,6 +19,10 @@ body#profile {
       box-sizing: border-box;
       padding: 16px 32px;
 
+      a {
+        cursor: pointer;
+      }
+
       p {
         margin: 0;
       }
