--- a/app/static/styles/_variables.scss
+++ b/app/static/styles/_variables.scss
@@ -11,6 +11,7 @@ $colour-highlight-hover: #8CEDB9;
 $colour-white: #FFFFFF;
 $colour-black: #000000;
 $colour-dark: #3D3D3D;
+$colour-light: #F6F6F6;
 $colour-green: #3FF09B;
 $colour-green-hover: #11D979;
 $colour-placeholder: #E4EDFF;
