--- a/app/project/frontend/templates/landing.html
+++ b/app/project/frontend/templates/landing.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SixLove | Welcome</title>
+    {% load static %}
     <!-- Bootstrap -->
     <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -16,18 +17,22 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script> -->
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
   </head>
   <body id="landing">
     <div class="auth-container">
       <!-- ---------------------------- Logo ----------------------------  -->
-      <img class="logo" src="./images/SixLoveLogo.svg" alt="Six Love Logo" />
+      <img
+        class="logo"
+        src="{% static 'images/SixLoveLogo.svg' %}"
+        alt="Six Love Logo"
+      />
       <!-- --------------X------------- Logo --------------X-------------  -->
       <!-- ---------------------------- Main ----------------------------  -->
       <p>Got what it takes to become a competitive tennis player?</p>
       <img
         class="landing-pic"
-        src="./images/landing-pic.svg"
+        src="{% static 'images/landing-pic.svg' %}"
         alt="The landing pic."
       />
       <p>Sign up and find out.</p>
