--- a/app/project/frontend/templates/learn.html
+++ b/app/project/frontend/templates/learn.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SixLove | Learn</title>
+    {% load static %}
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -16,7 +17,7 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
@@ -30,7 +31,10 @@
     <!-- ---------------------------- Header ----------------------------  -->
     <header>
       <span
-        ><img src="./images/SixLoveLogo.svg" alt="SixLove Logo" width="30px;"
+        ><img
+          src="{% static 'images/SixLoveLogo.svg' %}"
+          alt="SixLove Logo"
+          width="30px;"
       /></span>
       <span id="title">SixLove</span>
       <a href="./login.html">login</a>
@@ -39,29 +43,32 @@
     <!-- ---------------------------- Nav Menu ----------------------------  -->
     <nav>
       <a href="./tennis.html"
-        ><img src="./images/tennis-page-icon.svg" alt="Tennis Page Icon" /><span
-          >Tennis</span
-        ></a
+        ><img
+          src="{% static 'images/tennis-page-icon.svg' %}"
+          alt="Tennis Page Icon"
+        /><span>Tennis</span></a
       >
       <a href="./feed.html"
-        ><img src="./images/feed-page-icon.svg" alt="Feed Page Icon" /><span
-          >Feed</span
-        ></a
+        ><img
+          src="{% static 'images/feed-page-icon.svg' %}"
+          alt="Feed Page Icon"
+        /><span>Feed</span></a
       >
       <a class="current" href="./learn.html"
-        ><img src="./images/learn-page-icon.svg" alt="Learn Page Icon" /><span
-          >Learn</span
-        ></a
+        ><img
+          src="{% static 'images/learn-page-icon.svg' %}"
+          alt="Learn Page Icon"
+        /><span>Learn</span></a
       >
       <a href="./history.html"
         ><img
-          src="./images/history-page-icon.svg"
+          src="{% static 'images/history-page-icon.svg' %}"
           alt="History Page Icon"
         /><span>History</span></a
       >
       <a href="./profile.html"
         ><img
-          src="./images/profile-page-icon.svg"
+          src="{% static 'images/profile-page-icon.svg' %}"
           alt="Profile Page Icon"
         /><span>Profile</span></a
       >
