--- a/app/project/frontend/templates/profile.html
+++ b/app/project/frontend/templates/profile.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SixLove | Profile</title>
+    {% load static %}
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -16,8 +17,8 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./styles/style.css" />
-    <script src="./scripts/profile.js" defer></script>
+    <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
+    <script src="{% static 'scripts/profile.js' %}" defer></script>
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
@@ -31,7 +32,10 @@
     <!-- ---------------------------- Header ----------------------------  -->
     <header style="display: none">
       <span
-        ><img src="./images/SixLoveLogo.svg" alt="SixLove Logo" width="30px;"
+        ><img
+          src="{% static 'images/SixLoveLogo.svg' %}"
+          alt="SixLove Logo"
+          width="30px;"
       /></span>
       <span id="title">SixLove</span>
       <a href="./login.html">login</a>
@@ -40,29 +44,32 @@
     <!-- ---------------------------- Nav Menu ----------------------------  -->
     <nav>
       <a href="./tennis.html"
-        ><img src="./images/tennis-page-icon.svg" alt="Tennis Page Icon" /><span
-          >Tennis</span
-        ></a
+        ><img
+          src="{% static 'images/tennis-page-icon.svg' %}"
+          alt="Tennis Page Icon"
+        /><span>Tennis</span></a
       >
       <a href="./feed.html"
-        ><img src="./images/feed-page-icon.svg" alt="Feed Page Icon" /><span
-          >Feed</span
-        ></a
+        ><img
+          src="{% static 'images/feed-page-icon.svg' %}"
+          alt="Feed Page Icon"
+        /><span>Feed</span></a
       >
       <a href="./learn.html"
-        ><img src="./images/learn-page-icon.svg" alt="Learn Page Icon" /><span
-          >Learn</span
-        ></a
+        ><img
+          src="{% static 'images/learn-page-icon.svg' %}"
+          alt="Learn Page Icon"
+        /><span>Learn</span></a
       >
       <a href="./history.html"
         ><img
-          src="./images/history-page-icon.svg"
+          src="{% static 'images/history-page-icon.svg' %}"
           alt="History Page Icon"
         /><span>History</span></a
       >
       <a class="current" href="./profile.html"
         ><img
-          src="./images/profile-page-icon.svg"
+          src="{% static 'images/profile-page-icon.svg' %}"
           alt="Profile Page Icon"
         /><span>Profile</span></a
       >
@@ -74,14 +81,20 @@
       <div class="background">
         <p>Background</p>
         <a data-bs-toggle="modal" data-bs-target="#SettingsMenu">
-          <!-- <img src="./images/more-icon.svg" alt="Settings Icon" /> -->
-          <img src="./images/settings-icon.svg" alt="Settings Icon" />
+          <!-- <img src="{% static 'images/more-icon.svg' %}" alt="Settings Icon" /> -->
+          <img
+            src="{% static 'images/settings-icon.svg' %}"
+            alt="Settings Icon"
+          />
         </a>
       </div>
       <!-- --------------X------------- Background --------------X-------------  -->
       <!-- ---------------------------- Profile Img Section ----------------------------  -->
       <div class="profile-img-section">
-        <img src="./images/dp-temp.png" alt="Temporary Profile Pic" />
+        <img
+          src="{% static 'images/dp-temp.png' %}"
+          alt="Temporary Profile Pic"
+        />
       </div>
       <!-- --------------X------------- Profile Img Section --------------X-------------  -->
       <!-- ---------------------------- Profile Info Section ----------------------------  -->
@@ -106,12 +119,15 @@
       <div class="show-toggle profile-toggle-view-section">
         <div class="toggle-btns">
           <button class="active btn-toggle-menu" id="display-posts-btn">
-            <img src="./images/toggle-menu-icon.svg" alt="Toggle menu icon" />
+            <img
+              src="{% static 'images/toggle-menu-icon.svg' %}"
+              alt="Toggle menu icon"
+            />
           </button>
           <span>|</span>
           <button class="btn-toggle-achievements" id="display-achievements-btn">
             <img
-              src="./images/toggle-achievements-icon.svg"
+              src="{% static 'images/toggle-achievements-icon.svg' %}"
               alt="Toggle achievements icon"
             />
           </button>
