--- a/app/project/frontend/templates/login.html
+++ b/app/project/frontend/templates/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SixLove | Login</title>
+    {% load static %}
     <!-- Bootstrap -->
     <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -16,11 +17,11 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script> -->
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
   </head>
   <body id="login">
     <div class="auth-container">
-      <img src="./images/SixLoveLogo.svg" alt="Six Love Logo" />
+      <img src="{% static 'images/SixLoveLogo.svg' %}" alt="Six Love Logo" />
       <!-- ---------------------------- Form ----------------------------  -->
       <form action="./profile.html">
         <input type="text" placeholder="Username" />
@@ -34,7 +35,9 @@
       <!-- ---------------------------- Google Login ----------------------------  -->
       <p class="google-login">
         <span>Login with</span>
-        <span><img src="./images/GoogleIcon.svg" alt="Google Logo" /></span>
+        <span
+          ><img src="{% static 'images/GoogleIcon.svg' %}" alt="Google Logo"
+        /></span>
         <span>Google</span>
       </p>
       <!-- --------------X------------- Google Login --------------X-------------  -->
