--- a/app/project/frontend/templates/signup.html
+++ b/app/project/frontend/templates/signup.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SixLove | Sign Up</title>
+    {% load static %}
     <!-- Bootstrap -->
     <!-- <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -16,11 +17,11 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script> -->
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
   </head>
   <body id="signup">
     <div class="auth-container">
-      <img src="./images/SixLoveLogo.svg" alt="Six Love Logo" />
+      <img src="{% static 'images/SixLoveLogo.svg' %}" alt="Six Love Logo" />
       <!-- ---------------------------- Form ----------------------------  -->
       <form action="#">
         <input type="text" placeholder="First Name" />
