Adding the links to the feed page.

--- a/app/project/frontend/templates/tennis.html
+++ b/app/project/frontend/templates/tennis.html
@@ -38,7 +38,7 @@
           width="30px;"
       /></span>
       <span id="title">SixLove</span>
-      <a href="./login.html">login</a>
+      <a href="{% url 'login' %}">login</a>
     </header>
     <!-- --------------X------------- Header --------------X-------------  -->
     <!-- ---------------------------- Nav Menu ----------------------------  -->
