--- a/app/project/frontend/templates/signup.html
+++ b/app/project/frontend/templates/signup.html
@@ -38,7 +38,7 @@
       <section>
         <p>
           Already have an account?
-          <a href="./login.html">Login</a>
+          <a href="{% url 'login' %}">Login</a>
         </p>
       </section>
       <!-- --------------X------------- Info Action --------------X-------------  -->
