Adding the links to the landing  page.

--- a/app/project/frontend/templates/landing.html
+++ b/app/project/frontend/templates/landing.html
@@ -39,8 +39,8 @@
       <!-- --------------X------------- Main --------------X-------------  -->
       <!-- ---------------------------- Actions Buttons ----------------------------  -->
       <div class="action-btns">
-        <a href="./login.html"><button>Login</button></a>
-        <a href="./signup.html"><button>Sign Up</button></a>
+        <a href="{% url 'login' %}"><button>Login</button></a>
+        <a href="{% url 'signup' %}"><button>Sign Up</button></a>
       </div>
       <!-- --------------X------------- Action Buttons --------------X-------------  -->
     </div>
