Incorporating a base page for the learn page.

--- a/app/project/frontend/templates/base.html
+++ b/app/project/frontend/templates/base.html
@@ -28,7 +28,7 @@
       referrerpolicy="no-referrer"
     />
   </head>
-  <body id="tennis">
+  <body id="{% block page_id %}{% endblock %}">
     <!-- ---------------------------- Header ----------------------------  -->
     <header>
       <span
