--- a/app/project/frontend/templates/tennis.html
+++ b/app/project/frontend/templates/tennis.html
@@ -286,3 +286,4 @@ Notes here...</textarea
 <!-- --------------X------------- Modal --------------X-------------  -->
 {% endblock %}
 {% block active_tennis %}current{% endblock %}
+{% block page_id %}tennis{% endblock %}
