--- a/app/project/frontend/templates/learn.html
+++ b/app/project/frontend/templates/learn.html
@@ -1,82 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SixLove | Learn</title>
-    {% load static %}
-    <!-- Bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
-    <!-- Font Awesome -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-  </head>
-  <body id="learn">
-    <!-- ---------------------------- Header ----------------------------  -->
-    <header>
-      <span
-        ><img
-          src="{% static 'images/SixLoveLogo.svg' %}"
-          alt="SixLove Logo"
-          width="30px;"
-      /></span>
-      <span id="title">SixLove</span>
-      <a href="{% url 'login' %}">login</a>
-    </header>
-    <!-- --------------X------------- Header --------------X-------------  -->
-    <!-- ---------------------------- Nav Menu ----------------------------  -->
-    <nav>
-      <a href="{% url 'tennis' %}"
-        ><img
-          src="{% static 'images/tennis-page-icon.svg' %}"
-          alt="Tennis Page Icon"
-        /><span>Tennis</span></a
-      >
-      <a href="{% url 'feed' %}"
-        ><img
-          src="{% static 'images/feed-page-icon.svg' %}"
-          alt="Feed Page Icon"
-        /><span>Feed</span></a
-      >
-      <a class="current" href="{% url 'learn' %}"
-        ><img
-          src="{% static 'images/learn-page-icon.svg' %}"
-          alt="Learn Page Icon"
-        /><span>Learn</span></a
-      >
-      <a href="{% url 'history' %}"
-        ><img
-          src="{% static 'images/history-page-icon.svg' %}"
-          alt="History Page Icon"
-        /><span>History</span></a
-      >
-      <a href="{% url 'profile' %}"
-        ><img
-          src="{% static 'images/profile-page-icon.svg' %}"
-          alt="Profile Page Icon"
-        /><span>Profile</span></a
-      >
-    </nav>
-    <!-- --------------X------------- Nav Menu --------------X-------------  -->
-    <!-- ---------------------------- Main ----------------------------  -->
-    <main>
-      <h1 class="heading">Discover</h1>
+{% extends 'base.html' %} 
+{% block title %}Learn{% endblock %} 
+{% block content %}
+<h1 class="heading">Discover</h1>
       <!-- ---------------------------- Search Bar ----------------------------  -->
       <div class="search-bar">
         <div class="search-container">
@@ -183,7 +108,6 @@
         </div>
       </div>
       <!-- --------------X------------- Featured Tutorials --------------X-------------  -->
-    </main>
-    <!-- --------------X------------- Main --------------X-------------  -->
-  </body>
-</html>
+      {% endblock %}
+      {% block active_learn %}current{% endblock %}
+      {% block page_id %}learn{% endblock %}
