--- a/app/project/frontend/templates/history.html
+++ b/app/project/frontend/templates/history.html
@@ -1,84 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SixLove | History</title>
-    {% load static %}
-    <!-- Bootstrap -->
-    <!-- <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script> -->
-    <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
-  </head>
-  <body id="history">
-    <!-- ---------------------------- Header ----------------------------  -->
-    <header>
-      <span
-        ><img
-          src="{% static 'images/SixLoveLogo.svg' %}"
-          alt="SixLove Logo"
-          width="30px;"
-      /></span>
-      <span id="title">SixLove</span>
-      <a href="{% url 'login' %}">login</a>
-    </header>
-    <!-- --------------X------------- Header --------------X-------------  -->
-    <!-- ---------------------------- Nav Menu ----------------------------  -->
-    <nav>
-      <a href="{% url 'tennis' %}"
-        ><img
-          src="{% static 'images/tennis-page-icon.svg' %}"
-          alt="Tennis Page Icon"
-        /><span>Tennis</span></a
-      >
-      <a href="{% url 'feed' %}"
-        ><img
-          src="{% static 'images/feed-page-icon.svg' %}"
-          alt="Feed Page Icon"
-        /><span>Feed</span></a
-      >
-      <a href="{% url 'learn' %}"
-        ><img
-          src="{% static 'images/learn-page-icon.svg' %}"
-          alt="Learn Page Icon"
-        /><span>Learn</span></a
-      >
-      <a class="current" href="{% url 'history' %}"
-        ><img
-          src="{% static 'images/history-page-icon.svg' %}"
-          alt="History Page Icon"
-        /><span>History</span></a
-      >
-      <a href="{% url 'profile' %}"
-        ><img
-          src="{% static 'images/profile-page-icon.svg' %}"
-          alt="Profile Page Icon"
-        /><span>Profile</span></a
-      >
-    </nav>
-    <!-- --------------X------------- Nav Menu --------------X-------------  -->
-    <!-- ---------------------------- Main ----------------------------  -->
-    <main>
-      <h1>History</h1>
-      <input class="session-date-picker" type="date" />
-      <div class="sessions">
-        <p>No completed tennis sessions on this day.</p>
-        <div class="session">
-          <p class="session-name">Tennis Session</p>
-          <p class="session-notes">Notes here...</p>
-          <p class="session-date">DD-MM-YYYY</p>
-        </div>
-      </div>
-    </main>
-    <!-- --------------X------------- Main --------------X-------------  -->
-  </body>
-</html>
+{% extends 'base.html' %} 
+{% block title %}History{% endblock %} 
+{% block content %}
+<h1>History</h1>
+<input class="session-date-picker" type="date" />
+<div class="sessions">
+  <p>No completed tennis sessions on this day.</p>
+  <div class="session">
+    <p class="session-name">Tennis Session</p>
+    <p class="session-notes">Notes here...</p>
+    <p class="session-date">DD-MM-YYYY</p>
+  </div>
+</div>
+{% endblock %}
+{% block active_history %}current{% endblock %}
+{% block page_id %}history{% endblock %}
