--- a/app/project/frontend/templates/base.html
+++ b/app/project/frontend/templates/base.html
@@ -6,6 +6,7 @@
     <title>SixLove | {% block title %}{% endblock %}</title>
     {% load static %}
     <!-- Bootstrap -->
+    {% if use_bootstrap %}
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -17,8 +18,8 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    {% endif %}
     <link rel="stylesheet" href="{% static 'styles/style.css' %}" />
-    <!-- <script src="{% static 'scripts/tennis.js' %}" defer></script> -->
     <!-- Font Awesome -->
     <link
       rel="stylesheet"
@@ -27,8 +28,11 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- Additional Styles / Links -->
+    {% block extra_head %}{% endblock %}
   </head>
   <body id="{% block page_id %}{% endblock %}">
+    {% if page != 'profile' %}
     <!-- ---------------------------- Header ----------------------------  -->
     <header>
       <span
@@ -40,10 +44,13 @@
       <span id="title">SixLove</span>
       <a href="{% url 'login' %}">login</a>
     </header>
+    {% endif %}
     <!-- --------------X------------- Header --------------X-------------  -->
     <!-- ---------------------------- Nav Menu ----------------------------  -->
     <nav>
-      <a class="{% block active_tennis %}{% endblock %}" href="{% url 'tennis' %}"
+      <a
+        class="{% block active_tennis %}{% endblock %}"
+        href="{% url 'tennis' %}"
         ><img
           src="{% static 'images/tennis-page-icon.svg' %}"
           alt="Tennis Page Icon"
@@ -61,13 +68,17 @@
           alt="Learn Page Icon"
         /><span>Learn</span></a
       >
-      <a class="{% block active_history %}{% endblock %}" href="{% url 'history' %}"
+      <a
+        class="{% block active_history %}{% endblock %}"
+        href="{% url 'history' %}"
         ><img
           src="{% static 'images/history-page-icon.svg' %}"
           alt="History Page Icon"
         /><span>History</span></a
       >
-      <a class="{% block active_profile %}{% endblock %}" href="{% url 'profile' %}"
+      <a
+        class="{% block active_profile %}{% endblock %}"
+        href="{% url 'profile' %}"
         ><img
           src="{% static 'images/profile-page-icon.svg' %}"
           alt="Profile Page Icon"
