--- a/app/project/frontend/templates/profile.html
+++ b/app/project/frontend/templates/profile.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %} 
 {% block title %}Profile{% endblock %} 
-{% block content %}
 {% load static %}
+{% block extra_head %}<script src="{% static 'scripts/profile.js' %}" defer></script>{% endblock %}
+{% block content %}
 <!-- ---------------------------- Background ----------------------------  -->
 <div class="background">
   <p>Background</p>
