--- a/app/project/frontend/templates/tennis.html
+++ b/app/project/frontend/templates/tennis.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %} 
 {% block title %}Tennis{% endblock %} 
+{% block extra_head %}
+{% comment %} <script src="{% static 'scripts/tennis.js' %}" defer></script> {% endcomment %}
+{% endblock %}
 {% block content %}
 <h1 class="heading">Program</h1>
 <!-- ---------------------------- Today's Sessions ----------------------------  -->
