--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -165,14 +165,14 @@ body#login .auth-container section a, body#signup .auth-container section a {
     padding: 2px 4px;
   }
 }
-body#landing {
+body#landing, body#success {
   margin: 0;
   padding: 0;
   background-color: #578DDD;
   color: #FFFFFF;
   height: 100%;
 }
-body#landing .auth-container {
+body#landing .auth-container, body#success .auth-container {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -180,11 +180,11 @@ body#landing .auth-container {
   height: 100vh;
   margin: 4px 0 32px 0;
 }
-body#landing .auth-container .logo {
+body#landing .auth-container .logo, body#success .auth-container .logo {
   width: 60px;
   margin: 0;
 }
-body#landing .auth-container p {
+body#landing .auth-container p, body#success .auth-container p {
   font-family: "Righteous", sans-serif;
   min-width: 300px;
   width: 50vw;
@@ -192,15 +192,15 @@ body#landing .auth-container p {
   font-size: 1.4rem;
   letter-spacing: 1px;
 }
-body#landing .auth-container .landing-pic {
+body#landing .auth-container .landing-pic, body#success .auth-container .landing-pic {
   height: 50vh;
 }
-body#landing .auth-container .action-btns {
+body#landing .auth-container .action-btns, body#success .auth-container .action-btns {
   display: flex;
   flex-direction: column;
   gap: 16px;
 }
-body#landing .auth-container .action-btns button {
+body#landing .auth-container .action-btns button, body#success .auth-container .action-btns button {
   min-width: 300px;
   width: 50vw;
   box-sizing: border-box;
@@ -209,14 +209,24 @@ body#landing .auth-container .action-btns button {
   border-radius: 8px;
   font-size: 0.9rem;
 }
-body#landing .auth-container .action-btns button {
+body#landing .auth-container .action-btns button, body#success .auth-container .action-btns button {
   background-color: #BDFDDB;
   color: #3D3D3D;
   font-weight: bold;
   cursor: pointer;
 }
-body#landing .auth-container .action-btns button:hover {
+body#landing .auth-container .action-btns button:hover, body#success .auth-container .action-btns button:hover {
   background-color: #8CEDB9;
+}
+
+body#success .auth-container {
+  justify-content: center;
+}
+body#success .auth-container .success-msg {
+  font-family: "Roboto Mono", monospace;
+}
+body#success .auth-container .success-celebration {
+  font-size: 8rem;
 }
 
 body#tennis main {
