--- a/static/styles/_landing.scss
+++ b/static/styles/_landing.scss
@@ -1,4 +1,4 @@
-body#landing, body#success {
+body#landing, body#success, body#onboarding {
   margin: 0;
   padding: 0;
 
@@ -71,6 +71,53 @@ body#success {
 
     .success-celebration {
       font-size: 8rem;
+    }
+  }
+}
+
+body#onboarding {
+  .auth-container {
+    // justify-content: center;
+
+    p {
+      font-family: $font-main;
+    }
+
+    .form-btn-group {
+      background-color: $colour-highlight;
+      color: $colour-dark;
+
+      // Flex
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      min-width: 300px;
+      width: 50vw;
+      box-sizing: border-box;
+      padding: 12px 24px;
+      border: 1px solid $colour-black;
+      border-radius: 8px;
+      font-size: 0.9rem;
+
+      &:hover {
+        background-color: $colour-highlight-hover;
+        cursor: pointer;
+      }
+
+      &:hover > button {
+        background-color: $colour-highlight-hover;
+        cursor: pointer;
+      }
+
+      button {
+        background-color: $colour-highlight;
+        border: none;
+        color: inherit;
+
+        font-size: 1.2rem;
+        font-weight: bold;
+      }
     }
   }
 }
