--- a/app/project/frontend/static/styles/_landing.scss
+++ b/app/project/frontend/static/styles/_landing.scss
@@ -1,4 +1,4 @@
-body#landing {
+body#landing, body#success, body#onboarding {
   margin: 0;
   padding: 0;
 
@@ -56,6 +56,90 @@ body#landing {
         &:hover {
           background-color: $colour-highlight-hover;
         }
+      }
+    }
+  }
+}
+
+body#success {
+  .auth-container {
+    justify-content: center;
+
+    .success-msg {
+      font-family: $font-main;
+    }
+
+    .success-celebration {
+      font-size: 8rem;
+    }
+  }
+}
+
+body#onboarding {
+  .auth-container {
+    justify-content: center;
+
+    p {
+      font-family: $font-main;
+      letter-spacing: 0px;
+      text-align: center;
+      font-size: 1.1rem;
+      margin-top: 84px;
+      margin-bottom: 32px;
+    }
+
+    .form-btn-group {
+      background-color: $colour-highlight;
+      color: $colour-dark;
+
+      // Flex
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+
+      min-width: 300px;
+      width: 50vw;
+      box-sizing: border-box;
+      padding: 12px 24px;
+      border: 1px solid $colour-black;
+      border-radius: 8px;
+      font-size: 0.9rem;
+
+      &:hover {
+        background-color: $colour-highlight-hover;
+        cursor: pointer;
+      }
+
+      &:hover > button {
+        background-color: $colour-highlight-hover;
+        cursor: pointer;
+      }
+
+      button {
+        background-color: $colour-highlight;
+        border: none;
+        color: inherit;
+
+        font-size: 1.2rem;
+        font-weight: bold;
+      }
+    }
+
+    .next-btn {
+      background-color: $colour-white;
+      color: $colour-dark;
+      font-weight: bold;
+
+      min-width: 300px;
+      width: 50vw;
+      margin-top: 48px;
+      padding: 12px 16px;
+      border: 1px solid $colour-black;
+      border-radius: 8px;
+
+      &:hover {
+        cursor: pointer;
+        background-color: #ffffffdf;
       }
     }
   }
