--- a/app/project/frontend/templates/onboarding.html
+++ b/app/project/frontend/templates/onboarding.html
@@ -25,11 +25,11 @@
               <span>6 weeks</span>
             </div>
             <div class="form-btn-group">
-              <button>RapidFire</button>
+              <button>SteadyWaters</button>
               <span>3 months</span>
             </div>
             <div class="form-btn-group">
-              <button>RapidFire</button>
+              <button>DeepDive</button>
               <span>6 months</span>
             </div>
           {% comment %}</div>{% endcomment %}
@@ -43,6 +43,10 @@
               <button>ExtremeMode</button>
               <span>Daily</span>
             </div>
+            <div class="form-btn-group">
+              <button>BalancedMode</button>
+              <span>3x per week</span>
+            </div>
           {% comment %}</div>{% endcomment %}
           <button class="next-btn q2-btn" type="button">Next</button>
         </div>
@@ -53,6 +57,14 @@
             <div class="form-btn-group">
               <button>FreeWeekender</button>
               <span>MONDAY, WEDNESDAY, FRIDAY</span>
+            </div>
+            <div class="form-btn-group">
+              <button>MidWeekBlaster</button>
+              <span>TUESDAY, THURSDAY, SATURDAY</span>
+            </div>
+            <div class="form-btn-group">
+              <button>HatTrickers</button>
+              <span>PICK THREE DAYS</span>
             </div>
           {% comment %}</div>{% endcomment %}
           <button class="next-btn q3-btn" type="button">Next</button>
