--- a/app/project/frontend/static/styles/_landing.scss
+++ b/app/project/frontend/static/styles/_landing.scss
@@ -91,6 +91,7 @@ body#onboarding {
     .form-btn-group {
       background-color: $colour-highlight;
       color: $colour-dark;
+      margin-bottom: 12px;
 
       // Flex
       display: flex;
@@ -132,7 +133,7 @@ body#onboarding {
 
       min-width: 300px;
       width: 50vw;
-      margin-top: 48px;
+      margin-top: 36px;
       padding: 12px 16px;
       border: 1px solid $colour-black;
       border-radius: 8px;
