--- a/app/project/frontend/static/styles/style.css
+++ b/app/project/frontend/static/styles/style.css
@@ -243,6 +243,7 @@ body#onboarding .auth-container p {
 body#onboarding .auth-container .form-btn-group {
   background-color: #BDFDDB;
   color: #3D3D3D;
+  margin-bottom: 12px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -275,7 +276,7 @@ body#onboarding .auth-container .next-btn {
   font-weight: bold;
   min-width: 300px;
   width: 50vw;
-  margin-top: 48px;
+  margin-top: 36px;
   padding: 12px 16px;
   border: 1px solid #000000;
   border-radius: 8px;
