The user is able to update their tennis sessions.

--- a/tennis_session_crud_app/project/tennis_session/templates/tennis_session/base.html
+++ b/tennis_session_crud_app/project/tennis_session/templates/tennis_session/base.html
@@ -10,6 +10,39 @@
           Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue',
           sans-serif;
       }
+
+      .session {
+        border: 1px solid #000000;
+        border-radius: 8px;
+        margin-bottom: 16px;
+      }
+
+      .session span {
+        font-weight: bold;
+      }
+
+      button,
+      .session button {
+        margin-left: 20px;
+        margin-bottom: 16px;
+        background-color: #000000;
+        color: #ffffff;
+        font-weight: bold;
+
+        border: none;
+        border-radius: 8px;
+        padding: 8px 16px;
+      }
+
+      button:hover,
+      .session button:hover {
+        cursor: pointer;
+        background-color: #207025;
+      }
+
+      .session p {
+        padding-left: 20px;
+      }
     </style>
   </head>
   <body>
