--- a/tennis_session_crud_app/project/tennis_session/templates/tennis_session/index.html
+++ b/tennis_session_crud_app/project/tennis_session/templates/tennis_session/index.html
@@ -8,4 +8,6 @@
   {{ form.as_p }}
   <input type="submit" value="Add Tennis Session">
 </form>
+
+<a href="{% url 'tennis-sessions' %}"><button style="margin-top: 20px;">View Tennis Sessions</button></a>
 {% endblock %}
