--- a/tennis_session_crud_app/project/tennis_session/templates/tennis_session/base.html
+++ b/tennis_session_crud_app/project/tennis_session/templates/tennis_session/base.html
@@ -4,24 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple Tennis Page | {{ title }}</title>
-    {% load static %}
-    <!-- Bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
-      crossorigin="anonymous"
-    />
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-      crossorigin="anonymous"
-    ></script>
-    <!-- Custom styling -->
-    <link
-      rel="stylesheet"
-      href="{% static 'tennis_session/styles/style.css' %}"
-    />
     <style>
       * {
         font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI',
@@ -52,6 +34,10 @@
         padding: 8px 16px;
       }
 
+      .add-btn {
+        background-color: #58abe6;
+      }
+
       button:hover,
       .session button:hover {
         cursor: pointer;
@@ -60,6 +46,14 @@
 
       .session p {
         padding-left: 20px;
+      }
+
+      h2 {
+        margin-top: 64px;
+      }
+
+      a {
+        color: #000000;
       }
     </style>
   </head>
