--- a/tennis_session_crud_app/project/tennis_session/templates/tennis_session/calendar.html
+++ b/tennis_session_crud_app/project/tennis_session/templates/tennis_session/calendar.html
@@ -1,6 +1,6 @@
-{% extends './base.html' %} {% block content %}
+{% extends './base.html' %} 
+{% block content %}
 <h1>Calendar</h1>
-
 
 
 <a href="{% url 'tennis-sessions' %}"
