Adding minimal styling.

--- a/app/project/registration/templates/registration/index.html
+++ b/app/project/registration/templates/registration/index.html
@@ -1,19 +1,28 @@
 {% extends './base.html' %} 
 {% block content %}
-<h1>Home</h1>
-<ul>
-  <a href="{% url 'login' %}">
-    <li>Login</li>
-  </a>
-  <a href="{% url 'signup' %}">
-    <li>Signup</li>
-  </a>
-  <a href="{% url 'onboarding' %}">
-    <li>Onboarding</li>
-  </a>
-  <form style="margin-top: 24px;" method="post" action="{% url 'logout' %}?next={% url 'home' %}">
-    {% csrf_token %}
-    <button type="submit">Logout</button>
-</form>
-</ul>
+<header style="background-color: #a992fa; padding: 16px;">
+  <h1>Home</h1>
+  <ul>
+    <a href="{% url 'onboarding' %}">
+      <li>Onboarding</li>
+    </a>
+  </ul>
+  
+    <div style="text-align: right; margin-top: -100px;">
+      <div style="margin-top: 24px;">
+        <a href="{% url 'login' %}"><button>Login</button></a>
+        <a href="{% url 'signup' %}"><button>Sign Up</button></a>
+      </div>
+      <div>
+        <form style="margin-top: 24px;" method="post" action="{% url 'logout' %}?next={% url 'home' %}">
+          {% csrf_token %}
+          <button type="submit">Logout</button>
+        </form>
+      </div>
+    </div>
+</header>
+<main style="padding: 16px;">
+  <h2 >Welcome to SixLove</h2>
+  <p>This is the home page for SixLove, and welcome and enjoy!</p>
+</main>
 {% endblock %}
