--- a/app/project/registration/templates/registration/onboarding.html
+++ b/app/project/registration/templates/registration/onboarding.html
@@ -1,5 +1,7 @@
 {% extends './base.html' %} 
 {% block content %}
-<h1>Onboarding</h1>
-<p>Not implemented yet.</p>
+<main style="padding: 16px;">
+  <h2>Onboarding</h2>
+  <p>Not implemented yet.</p>
+</main>
 {% endblock %}
