--- a/app/project/registration/templates/registration/base.html
+++ b/app/project/registration/templates/registration/base.html
@@ -49,7 +49,8 @@
             {% if user.is_authenticated %}
             <div class="logout">
               <p>Welcome, {{ user.username }}</p>
-              <form style="margin-top: 24px;" method="post" action="{% url 'logout' %}?next={% url 'home' %}">
+              <!-- <form style="margin-top: 24px;" method="post" action="{% url 'logout' %}?next={% url 'home' %}"> -->
+              <form style="margin-top: 24px;" method="post" action="{% url 'logout' %}">
                 {% csrf_token %}
                 <button type="submit">Logout</button>
               </form>
