--- a/app/project/registration/templates/registration/signup.html
+++ b/app/project/registration/templates/registration/signup.html
@@ -1,7 +1,7 @@
 {% extends './base.html' %} 
 {% block content %}
 <h1>Sign Up</h1>
-<form action="" method="post">
+<form method="post">
   {% csrf_token %}
   {{ form.as_p }}
   <button type="submit">Sign Up</button>
