--- a/app/project/registration/templates/registration/base.html
+++ b/app/project/registration/templates/registration/base.html
@@ -10,8 +10,8 @@
           sans-serif;
       }
 
-      button {
-        margin-left: 20px;
+      button, .btn {
+        /* margin-left: 20px; */
         margin-bottom: 16px;
         background-color: #000000;
         color: #ffffff;
@@ -22,7 +22,7 @@
         padding: 8px 16px;
       }
 
-      button:hover {
+      button:hover, .btn:hover {
         cursor: pointer;
         background-color: #207025;
       }
